--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,9 @@
 ### 📦 `requirements.txt`
 
 ```txt
-PyQt5>=5.15
-matplotlib>=3.5
+Pillow==11.1.0
+protobuf==6.30.2
+PyQt6==6.8.1
 pandas>=1.3
 Pillow>=9.0
 
